Make clear you can use an IDE with the right config for this exercise